--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body {
 	margin: 0;
 	padding: 0;
+	background-color: #F0F0F7;
 }
 
 p, li {
@@ -12,10 +13,12 @@ p, li {
 	font-family: 'Open Sans', helvetica, arial, san-serif;
 	margin: 0 auto;
 	width: 950px;
+	padding: 20px;
+	background-color: rgb(245, 246, 255);
 }
 
 .section-heading {
-	color: #616161;
+	color: #359CDB;
 	font-weight: bold;
 	margin-top: 35px;
 }
