--- a/css/3dcube_style.css
+++ b/css/3dcube_style.css
@@ -29,7 +29,7 @@ a {
 	font-family: 'Black Ops One', cursive;
 }
 
-#CanvasHolder{
+#aya-cube-holder{
 	/*border: 1px solid red;*/
 	position: relative;
   width: 100%;
@@ -37,7 +37,7 @@ a {
   margin: 0 auto;
 }
 
-#CubeCanvas{
+#aya-cube-canvas{
 	/*border: 1px solid blue;*/
 	position: absolute;
 	left: 0;
