--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  color: #777;
+  color: #BDBDBD;
   font-family: 'Open Sans', helvetica, arial, san-serif;
   padding: 0;
   margin: 0;
@@ -41,7 +41,7 @@ h3 {
 }
 
 .sidebar {
-  background: rgb(61, 79, 93);
+  background: rgb(6, 13, 32);
   color: #fff;
 }
 
@@ -94,6 +94,7 @@ h3 {
 
 .content {
   padding: 2em 1em 0;
+  background-color: rgb(11,11,13);
 }
 
 .post {
@@ -105,7 +106,7 @@ h3 {
 }
 .post-title {
   font-size: 2em;
-  color: #575757;
+  color: #CD3B75;
   margin-bottom: 0.2em;
 }
 .post-sub-title {
