--- a/css/main.css
+++ b/css/main.css
@@ -218,3 +218,16 @@ h3 {
 #aya-cube-canvas{
   z-index: 1;
 }
+
+.videoWrapper {
+  position: relative;
+  padding-bottom: 30%;
+  width: 50%;
+}
+.videoWrapper iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
