--- a/css/main.css
+++ b/css/main.css
@@ -222,7 +222,9 @@ h3 {
 .videoWrapper {
   position: relative;
   padding-bottom: 30%;
-  width: 50%;
+  margin-right: 20px;
+  width: 40%;
+  float: left;
 }
 .videoWrapper iframe {
   position: absolute;
@@ -230,4 +232,8 @@ h3 {
   left: 0;
   width: 100%;
   height: 100%;
+}
+
+.post {
+  overflow: hidden;
 }
