--- a/css/main.css
+++ b/css/main.css
@@ -123,6 +123,11 @@ h3 {
   color: #444;*/
   line-height: 1.8em;
 }
+.post-description.farewell{
+  color: #CD3B75;
+  font-size: 150%;
+  line-height: 1.8em;
+}
 .post-meta {
   color: #999;
   font-size: 90%;
